# pumice

./: .gitignore  Cargo.toml  README.md  gen-bindings.sh
bindings/: Cargo.toml
bindings-glue/src/: lib.rs
bindings-template/: Cargo.toml
bindings-template/src/: lib.rs  loader.rs
bindings/src/: loader.rs
bindings_template/: Cargo.toml
bindings_template/src/: lib.rs  loader.rs  util.rs
bindings_template/src/extensions/: metadata.rs
codegen-template/: Cargo.toml
codegen-template/slag-sys/: Cargo.toml
codegen-template/slag-sys/src/: surface.rs
codegen-template/slag-sys/src/loader/: tables.rs
codewrite/: Cargo.toml
codewrite-macro/: Cargo.toml
codewrite-macro/src/: lib.rs
codewrite/src/: lib.rs  write.rs
codewrite/src/formatters/: mod.rs  naive.rs  prettyplease.rs  width.rs
format-macro/: Cargo.toml
format_macro/: Cargo.toml
format_macro/src/: lib.rs
generator/: Cargo.toml
generator-lib/: Cargo.toml
generator-lib/src/: configuration.rs  debug_impl.rs  foreach_uniquestr.rs  interner.rs  lib.rs  type_declaration.rs
generator/src/: c_preprocessor.rs  debug_impl.rs  derives.rs  format_utils.rs  fs_utils.rs  interner.rs  lib.rs  ownership.rs  registry_format.rs  rename.rs  type_declaration.rs  undangle.rs  workarounds.rs  wrapper.rs
generator/src/codegen/: deep_copy.rs  dumb_hash.rs  mod.rs  symbols.rs  wrappers.rs
generator/src/codegen_support/: derives.rs  format_utils.rs  mod.rs  rename.rs  type_analysis.rs  type_query.rs
generator/src/context/: mod.rs  ownership.rs  undangle.rs  workarounds.rs
generator_lib/: Cargo.toml
generator_lib/src/: configuration.rs  foreach_uniquestr.rs  interner.rs  lib.rs  type_declaration.rs
pumice/: Cargo.toml
pumice-template/: Cargo.toml
pumice-template/src/: deep_copy.rs  dumb_hash.rs  lib.rs  surface.rs
pumice-template/src/extensions/: metadata.rs  mod.rs
pumice-template/src/loader/: mod.rs  tables.rs
pumice-template/src/util/: config.rs  format.rs  impl_macros.rs  mod.rs  pnext.rs  result.rs
pumice/src/: deep_copy.rs  dumb_hash.rs  lib.rs  surface.rs  vk.rs  vk10.rs  vk11.rs  vk12.rs  vk13.rs
pumice/src/extensions/: amd_buffer_marker.rs  amd_device_coherent_memory.rs  amd_display_native_hdr.rs  amd_draw_indirect_count.rs  amd_gcn_shader.rs  amd_gpu_shader_half_float.rs  amd_gpu_shader_int16.rs  amd_memory_overallocation_behavior.rs  amd_mixed_attachment_samples.rs  amd_negative_viewport_height.rs  amd_pipeline_compiler_control.rs  amd_rasterization_order.rs  amd_shader_ballot.rs  amd_shader_core_properties.rs  amd_shader_core_properties2.rs  amd_shader_early_and_late_fragment_tests.rs  amd_shader_explicit_vertex_parameter.rs  amd_shader_fragment_mask.rs  amd_shader_image_load_store_lod.rs  amd_shader_info.rs  amd_shader_trinary_minmax.rs  amd_texture_gather_bias_lod.rs  android_external_memory_android_hardware_buffer.rs  arm_rasterization_order_attachment_access.rs  ext_4444_formats.rs  ext_acquire_drm_display.rs  ext_acquire_xlib_display.rs  ext_astc_decode_mode.rs  ext_attachment_feedback_loop_layout.rs  ext_blend_operation_advanced.rs  ext_border_color_swizzle.rs  ext_buffer_device_address.rs  ext_calibrated_timestamps.rs  ext_color_write_enable.rs  ext_conditional_rendering.rs  ext_conservative_rasterization.rs  ext_custom_border_color.rs  ext_debug_marker.rs  ext_debug_report.rs  ext_debug_utils.rs  (+255 more)
pumice/src/loader/: mod.rs  tables.rs
pumice/src/util/: access.rs  config.rs  format.rs  impl_macros.rs  mod.rs  pnext.rs  stage.rs
slag-template/: Cargo.toml
slag-template/src/: deep_copy.rs  lib.rs  surface.rs
slag-template/src/extensions/: metadata.rs
slag-template/src/loader/: mod.rs
slag-template/src/util/: config.rs  impl_macros.rs  mod.rs  result.rs
template/src/: dumb_hash.rs
template/src/loader/: mod.rs
