[workspace]
members = [
    "generator",
    "generator-lib",
    "codewrite-macro",
    "codewrite"
]
exclude = [
    "codegen-template",
    "pumice"
]

[profile.release]
# the generator is already fast enough, enabling this because just I've been bitten by a silent overflow
overflow-checks = true
