[workspace]
members = [
    "generator",
    "generator-lib",
    "codewrite-macro",
    "codewrite",
    "pumice"
]
exclude = [
    "codegen-template",
]

[profile.release]
# the generator is already fast enough, enabling this because just I've been bitten by a silent overflow
overflow-checks = true
