[package]
name = "slag-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["loaded", "global_commands"]
linked = []
loaded = ["libloading"]
global_commands = []

[dependencies]
libloading = { version = "0.7", optional = true }