[package]
name = "slag-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["linked", "surface", "global_commands"]
linked = []
loaded = ["libloading"]
surface = ["raw-window-handle"]
global_commands = []

[dependencies]
libloading = { version = "0.7", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = { version = "0.3.0", optional = true }