[package]
name = "generator-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generator"
path = "./bin/generator.rs"

[[bin]]
name = "dump"
path = "./bin/dump.rs"

[dependencies]
vk-parse = "0.7"
lasso = "0.6.0"