[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "./bin/generate.rs"

[[bin]]
name = "dump"
path = "./bin/dump.rs"

[dependencies]
generator_lib = { path = "../generator_lib" }
format_macro = { path = "../format_macro" }
prettyplease = { version = "0.1" }
syn = { version = "1.0", default-features = false, features = ["full", "parsing"]}