[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "./bin/generate.rs"

[[bin]]
name = "dump"
path = "./bin/dump.rs"

[dependencies]
generator-lib = { path = "../generator-lib" }
codewrite-macro = { path = "../codewrite-macro" }
codewrite = { path = "../codewrite" }
slice-group-by = "0.3.0"
log = { version = "0.4.18", features = [] }
